<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="sync_needed">Sync needed</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
...
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="show_pending_reminders">Show pending reminders</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="property">Property</string>
    <string name="import_as">Import as…</string>
    <string name="new_notebook">New notebook</string>
    <string name="new_folder">New folder</string>
    <string name="scheduled">Scheduled</string>
    <string name="agenda">Agenda</string>
    <string name="state">State</string>
    <string name="priority">Priority</string>
    <string name="open">Open</string>
    <string name="widget">Widget</string>
    <string name="event">Event</string>

    <plurals name="notes_cut">
...
    <string name="search_hint">Search notes</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_dialog_message">Clear local database?</string>
    <string name="clear_database_summary">Clear local database</string>
    <string name="clear_database_performed">Database cleared</string>

    <string name="getting_started_notebook_name">Getting Started with Orgzly</string>
    <string name="reload_getting_started">Import “Getting Started with Orgzly”</string>
    <string name="reload_getting_started_summary">Import the latest version of the notebook</string>
    <string name="notebook_imported">Notebook imported</string>

    <string name="book_does_not_exist_anymore">This notebook does not exist any more.</string>
    <string name="note_does_not_exist_anymore">This note does not exist any more.</string>
    <string name="search_does_not_exist_anymore">This search does not exist any more.</string>
...
    <string name="tags">Tags</string>
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>

    <string name="book_encoding">Notebook\'s encoding</string>
...

    <string name="no_filters">You have no saved searches</string>

    <string name="book_shortcut_label">Notebook</string>
    <string name="new_note_shortcut_label">New note</string>

    <string name="down">Down</string>
    <string name="up">Up</string>

    <string name="permissions_rationale_for_local_repo">Syncing with a local directory requires storage permission</string>
    <string name="permissions_rationale_for_book_export">Exporting notebook requires storage permission</string>
    <string name="permissions_rationale_for_sync_start">Syncing with local repositories requires storage permission</string>
    <string name="permissions_rationale_for_external_files_access">Accessing external files requires storage permission</string>
    <string name="permissions_rationale_for_post_notifications">Permission needed to post notifications</string>
...

    <string name="also_delete_linked_book">Delete linked remote notebook</string>
    <string name="also_delete_linked_books">Delete any linked remote notebooks</string>
    <string name="message_deleting_book_failed">Deleting notebook(s) failed: %s</string>
    <string name="message_book_deleted">Notebook(s) deleted</string>

    <string name="default_priority">Default priority</string>
    <string name="lowest_priority">Lowest priority</string>

    <string name="todo_states">Keywords for active (todo) tasks</string>
    <string name="done_states">Keywords for completed (done) tasks</string>

    <string name="use_created_at_property">Use property for created-at time</string>
    <string name="use_created_at_property_summary">Sync created-at time using a property</string>

    <string name="created_at_property">Created-at property</string>
...
    <string name="reversed_note_click_action">Swap note click and long-click actions</string>
    <string name="reversed_note_click_action_summary">Click to select note, long-click to open</string>
    <string name="look_and_feel">Look &amp; Feel</string>
    <string name="notes_list">List of notes</string>
    <string name="prefs_title_new_note">New note</string>
    <string name="prefs_title_notifications">Notifications</string>
    <string name="app">App</string>
    <string name="test_connection">Test connection</string>
    <string name="connecting">Connecting…</string>
    <string name="no_connection">No connection</string>
    <string name="connection_successful">Connection successful</string>
    <string name="last_sync_with_argument">Last sync: %s</string>

...
        <item quantity="one">Note deleted</item>
        <item quantity="other">Deleted <b>%d</b> notes</item>
    </plurals>

    <string name="no_notes_deleted">No notes deleted</string>

    <string name="duplicate_keywords_not_allowed">Keyword %s already used</string>
    <string name="no_states_defined">No states defined</string>
    <string name="book_name_in_search">Notebook name in search results</string>

    <string name="display_notebook_name">Display notebook name</string>
    <string name="hide_empty_days_in_agenda">Hide empty days in agenda</string>
    <string name="group_scheduled_with_today">Don\'t show Scheduled tasks as overdue in agenda</string>
...
