...
    <item name="tags_button" type="id"/>
    <item name="tags_remove" type="id"/>
    <item name="tags_menu" type="id"/>
    <item name="breadcrumbs_text" type="id"/>
    <item name="location_button" type="id"/>
    <item name="location_container" type="id"/>
    <item name="scroll_view" type="id"/>
    <item name="metadata" type="id"/>
    <item name="metadata_header" type="id"/>
    <item name="content_header" type="id"/>
    <item name="content_view" type="id"/>
    <item name="title" type="id"/>
    <item name="title_view" type="id"/>
...
